recursion.lessons.recursion.spiral.Spiral.scala.error
Spiral:3: error: not found: value nbPas
	for (i<- 0 to nbPas) {
                      ^