recursion.lessons.recursion.spiral.Spiral.scala.code
def spiral(steps:Int, angle:Int, length:Int, increment:Int)    {
	for (i<- 0 to nbPas) {
		avance(length)
		gauche(angle)
		spiral(steps-1, angle, length+increment, increment) }
		
	}
	 
